# opengl

./: CMakeLists.txt  README.md  main.cpp
res/shaders/: Basic.shader
src/: CMakeLists.txt  Debug.h
src/Application/: CMakeLists.txt  application.cpp  application.h
src/Render/: CMakeLists.txt  Render.cpp  Render.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
